# codex-scraper

./: .gitignore  AGENTS.md  pyproject.toml
.ruler/: AGENTS.md  ruler.toml
llm_docs/: spatial-lite-datasette-docs.md  spatial-lite-tutorial.md
src/codex_scraper/: scrape.py
