[project]
name = "codex-scraper"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "httpx>=0.28.1",
    "mypy>=1.17.1",
    "playwright>=1.54.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "tqdm>=4.67.1",
]
